--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 body{
     width: 100vw;
     height: 100vh;
+    position:relative;
 }
 
 .wrapper{
@@ -9,6 +10,7 @@ body{
     height: 60%;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .title{
@@ -60,5 +62,71 @@ body{
     
 }
 .popup__book__details{
+    position:absolute;
+    left:0;
+    top:0;
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
     display: none;
+}
+
+.popup__frame{
+    width: 60%;
+    height: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    display: grid;
+    grid-template: 4rem 1fr/1fr 1fr;
+
+}
+
+.book__frame{
+    grid-column: 1/span 1;
+    width: 27rem;   
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+
+.book__intro{
+    grid-column: auto/span 1;
+    display: grid;
+    grid-template-rows: 8rem 1fr 1fr 5rem;
+}
+
+.book__title{
+    font-size: 20px;
+    color: rgb(113, 112, 112);
+    font-weight: 400;
+}
+
+.book__author{
+    font-size: 15px;
+    color: rgb(113, 112, 112);
+}
+
+.abstract{
+    font-size: 15px;
+    color: aliceblue;
+}
+
+.details__frame{
+    display:grid;
+    grid-template: 1fr 1fr/1fr 1fr;
+    font-size: 15px;
+    color: aliceblue;
+}
+
+
+
+.read__btn{
+    width: fit-content;
+    height: fit-content;
+    padding:.5rem 1rem;
+    font-size:15px;
+    justify-self: center;
+    align-self: flex-end;
 }
